[project]  
name = "passwdgen"  
version = "1.0.0"  
description = "Generador de contraseñas mediante criptografía robusta."  
readme = "README.md"  
requires-python = ">=3.8"  
authors = [{ name = "AdZiBo" }]  

dependencies = [  
"pyperclip"  
]  
  
[project.scripts]  
passwdgen = "passwdgen:main"

[build-system]  
requires = ["setuptools>=61"]  
build-backend = "setuptools.build_meta"

